if(UNIX)
  set(serial_test_libs ${PROJECT_NAME})

  if(USE_AMENT_CMAKE)
    ament_add_gtest(${PROJECT_NAME}-test unix_serial_tests.cc)
    if(TARGET ${PROJECT_NAME}-test)
      target_link_libraries(${PROJECT_NAME}-test ${serial_test_libs})
      if(NOT APPLE)
        target_link_libraries(${PROJECT_NAME}-test util)
      endif()
    endif()

    if(NOT APPLE)  # these tests are unreliable on macOS
      ament_add_gtest(${PROJECT_NAME}-test-timer unit/unix_timer_tests.cc)
      if(TARGET ${PROJECT_NAME}-test-timer)
        target_link_libraries(${PROJECT_NAME}-test-timer ${PROJECT_NAME})
      endif()
    endif()
  else()
    catkin_add_gtest(${PROJECT_NAME}-test unix_serial_tests.cc)
    if(TARGET ${PROJECT_NAME}-test)
      target_link_libraries(${PROJECT_NAME}-test ${serial_test_libs})
      if(NOT APPLE)
        target_link_libraries(${PROJECT_NAME}-test util)
      endif()
    endif()

    if(NOT APPLE)  # these tests are unreliable on macOS
      catkin_add_gtest(${PROJECT_NAME}-test-timer unit/unix_timer_tests.cc)
      if(TARGET ${PROJECT_NAME}-test-timer)
        target_link_libraries(${PROJECT_NAME}-test-timer ${PROJECT_NAME})
      endif()
    endif()
  endif()
endif()
